--- a/Week1/Day2/SignUp/style.css
+++ b/Week1/Day2/SignUp/style.css
@@ -83,6 +83,10 @@ input[type="email"], input[type="password"]{
     color: white;
 }
 
+.login-button:hover {
+    box-shadow: 0px 0px 8px #888;
+}
+
 .text-with-line {
     text-align: center;
     position: relative;
@@ -162,6 +166,11 @@ footer {
     color: white;
     padding: 10px 20px;
     border-radius: 20px;
+    margin-top: 20px;
+}
+
+.register-button:hover {
+    background-color: var(--violet-color);
 }
 
 .button-text {
