--- a/Week1/Day2/ShoppingSite/products.css
+++ b/Week1/Day2/ShoppingSite/products.css
@@ -1,8 +1,3 @@
-:root {
-    --green-color: rgb(22, 160, 133);
-    --red-color: rgb(215, 41, 42);
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -11,8 +6,10 @@
 }
 
 .gallery {
-    width: fit-content;
+    width: 80vw;
     margin: 0 auto;
+    text-align: center;
+    text-align-last:center;
 }
 
 .card {
@@ -69,22 +66,26 @@
 }
 
 .card-button {
-    padding: 10px 10px;
+    padding: 0 10px;
+    height: 30px;
     border-radius: 2px;
     outline: none;
     border: 1px solid gray;
     margin: 10px auto;
     font-size: 10px;
     background-color: white;
+    cursor: pointer;
+    box-sizing: border-box;
 }
 
 
 .icons {
     display: none;
     padding-top: 100px;
+    position: relative;
 }
 
-.card:hover>.card-button {
+.card-button:hover {
     background-color: var(--green-color);
     color: white;
     border: none;
@@ -106,7 +107,7 @@
     background-repeat: no-repeat;
 }
 
-.card:hover .icons {
+.img-div:hover .icons {
     display: inline-block;
 }
 
@@ -114,7 +115,7 @@
     background-color: rgba(255, 255, 255, 1);
     padding: 10px;
     display: inline-block;
-    position: relative;
+    /* position: relative; */
 }
 
 .icon:hover {
@@ -122,11 +123,26 @@
     color: white;
 }
 
-.icon-comment::before {
-    content: "hello";
-    display: none;
-
+.icon:hover::after {
+    content: "text";
+    background-color: rgb(50, 50, 50);
+    width: 100px;
+    top: 80px;
+    left: 50%;
+    transform: translateX(-50%);
+    position: absolute;
+    font-family: Arial, Helvetica, sans-serif, sans-serif;
+    font-size: 12px;
 }
-.icon:hover + .icon-comment::before {
-    display: inline-block;
+
+.icon-eye:hover::after {
+    content: "Remember this";
+}
+
+.icon-basket:hover::after {
+    content: "Add to wishlist";
+}
+
+.icon-cart:hover::after {
+    content: "Add to cart";
 }
