--- a/PortfolioProject/style.css
+++ b/PortfolioProject/style.css
@@ -32,9 +32,11 @@ h1 {
 }
 
 .bg {
-    background-image: url(img/me.jpeg);
+    background-image: linear-gradient(#fff), url(img/me.jpeg);
+    /* background-image: url(img/me.jpeg); */
+    background-size: 50%, 50%;
     background-position: right top;
-    background-size: contain;
+    /* background-size: contain; */
     background-repeat: no-repeat;
 }
 
@@ -43,7 +45,13 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 30rem;
+    gap: 70rem;
+}
+
+.main-text {
+    display: flex;
+    flex-direction: column;
+    gap: 20rem;
 }
 
 .text-accent {
@@ -69,6 +77,7 @@ h1 {
     list-style: none;
     display: flex;
     gap: 20rem;
+    flex-wrap: wrap;
 }
 
 .scroll-prompt {
