--- a/PortfolioProject/main.css
+++ b/PortfolioProject/main.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 
+* {
+    margin: 0;padding: 0;box-sizing: border-box;
+}
+
 html,
 h1,
 h2,
