--- a/Week4_AdvancedJS/Day5/TicTac/style.css
+++ b/Week4_AdvancedJS/Day5/TicTac/style.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Share Tech Mono', monospace;
+}
+
 .container {
     height: 100vh;
     width: 100vw;
@@ -7,34 +16,63 @@
     flex-direction: column;
     gap: 20px;
 }
+
+.field {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 5px;
+}
+
 .box {
     background: blue;
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 80px;
     color: white;
-    font-size: 30;
+    font-size: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.field {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-}
-
-.row {
-    display: flex;
-    gap: 5px;
-}
-
-#restart {
-    visibility: hidden;
-}
-
 .prompt {
     display: flex;
     flex-direction: column;
-    
+    gap: 20px;
+}
+
+.prompt-part {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 10px;
+}
+
+.btn-group {
+    display: flex;justify-content: center;
+    gap: 20px;
+}
+
+.btn-group * {
+    width: 50px
+}
+
+button {
+    padding: 0.5em 1em;
+    border: none;
+    background-color: rgb(220, 0, 202);
+    color: white;
+    text-transform: uppercase;
+}
+
+button#restart {
+    visibility: hidden;
+    font-size: 20px;
+}
+
+#winmsg{
+    visibility: hidden;
+}
+
+.users-choice {
+    display: none;
 }
