--- a/PortfolioProject/style.css
+++ b/PortfolioProject/style.css
@@ -37,6 +37,9 @@ h3 {
 h1 {
     font-size: 45px;
     line-height: 1;
+    max-width: 500rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .fullscreen {
